# hello-world

./: .gitattributes  .gitignore  LICENSE  README.md  build_info.txt  cmdline_options.txt  dev-requirements.txt  hello-world.py  makefile  mk_file_version_info.py  pyproject.toml  requirements.txt  setup.iss
.github/workflows/: build_executable.yml  makefile.yml  release.yml
