[project]
name = "hello-world"
authors = [
  { name="Ben Hattem", email="benghattem@gmail.com" },
]
description = "Say hello to the world!"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "click",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pyinstaller",
    "pywin32-ctypes",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
link-mode = "copy"

[tool.uv.pip]
generate-hashes = true
require-hashes = true

[tool.pylint.messages_control]
max-line-length = 120

[tool.ruff]
line-length = 120
indent-width = 4
